@startuml

skinparam classAttributeIconSize 0

interface ITransport {
  + {abstract} Send(data: vector<uint8_t>): bool
  + {abstract} Receive(data: vector<uint8_t>&): bool
  + {abstract} Init(): int
  + {abstract} Start(): void
  + {abstract} Destroy(): void
}

interface IClient {
  + {abstract} Send(data: vector<uint8_t>): bool
  + {abstract} Receive(data: vector<uint8_t>&): bool
  + {abstract} Init(ip_address: string, port: int): int
  + {abstract} Destroy(): void
}

class TCPTransport {
  - sockfd_: int
  - client_sockfd_: int
  - server_address_: char*
  - source_address_: char[INET_ADDRSTRLEN]
  - source_port_: int
  - server_portnum_: int
  - running_: atomic<bool>
  - acceptThread_: thread
  - messageQueue_: MessageQueue
  + TCPTransport(ip_address: const char*, port: int)
  + Init(): int
  + Start(): void
  + Destroy(): void
  + Send(data: vector<uint8_t>): bool
  + Receive(data: vector<uint8_t>&): bool
  + GetClientIp(): string
  + GetClientPort(): int
}

class UDPClient {
  - sockfd_: int
  - serverStruct_: sockaddr_in
  - server_address_: char[INET_ADDRSTRLEN]
  - server_portnum_: int
  + UDPClient()
  + Init(ip_address: string, port: int): int
  + Send(data: vector<uint8_t>): bool
  + Receive(data: vector<uint8_t>&): bool
  + Destroy(): void
}

class MessageQueue {
  - queue_: queue<vector<uint8_t>>
  - mutex_: pthread_mutex_t
  - cv_: pthread_cond_t
  + Push(msg: vector<uint8_t>): void
  + Pop(msg: vector<uint8_t>&, timeout_ms: int): bool
  + Clear(): void
}

class KPIRoverECU {
  - protocol_handler_: ProtocolHanlder*
  - tcp_transport_: TCPTransport*
  - imu_controller_: IMUController*
  - udp_client_: UDPClient*
  - timerThread_: thread
  - processingThread_: thread
  - imuThread_: thread
  - runningProcess_: atomic<bool>
  - runningState_: atomic<bool>
  - counter_: atomic<int>
  + KPIRoverECU(protocolHandler: ProtocolHanlder*, tcpTransport: TCPTransport*, udpClient: UDPClient*, imuController: IMUController*)
  + Start(): bool
  + Stop(): void
  + TimerThreadFuction(workClass: ProtocolHanlder*): void
  + ProcessingThreadFunction(): void
  + IMUThreadFucntion(workClass: IMUController*): void
  - GetCounter(): int {static}
}

class ProtocolHanlder {
  - motors_controller_: MotorController*
  + ProtocolHanlder(motorDriver: MotorController*)
  + HandleMessage(message: vector<uint8_t>): vector<uint8_t>
  + MotorsStopMessage(): vector<uint8_t>
  - HandleSetMotorSpeed(message: vector<uint8_t>): vector<uint8_t>
  - HandleGetApiVersion(message: vector<uint8_t>): vector<uint8_t>
  - HandleSetAllMotorsSpeed(message: vector<uint8_t>): vector<uint8_t>
  - HandleGetEncoder(message: vector<uint8_t>): vector<uint8_t>
  - HandleGetAllEncoders(message: vector<uint8_t>): vector<uint8_t>
}

class MotorController {
  - motor_number_: uint8_t
  - motors_: vector<Motor>
  - public_odometers_: array<unique_ptr<Odometer>, 4>
  - private_odometers_: array<unique_ptr<Odometer>, 4>
  - encoder_controller_: unique_ptr<EncoderController>
  + Init(motors: vector<MotorConfig>, motorNumber: uint8_t): int
  + SetMotorRPM(channel: int, newRPM: int): int
  + StopMotor(channel: int): int
  + GetEncoderCounter(channel: int): int
  + GetMotorsNumber(): int
  + Destroy(): void
}

class Motor {
  - motorNumber_: int
  - inverted_: bool
  - currentDutyCycle_: double
  - setpointRpm_: int
  - actualRpm_: int
  - pidRegulator_: PIDRegulator
  - lastTimePoint_: chrono::time_point
  - odometer_: Odometer*
  + Motor(assigned_number: int, is_inverted: bool, coeficients: array<float, 3>, odometer: Odometer*)
  + SetSetpoint(newRPM: int): int
  + MotorStop(): int
  + GetEncoderCounter(): int
  - SetPWM(inputRPM: int): int
  - GetActualRpm(ticks: int, timeSegment: float): float
  - GetTimeSegment(): float
  - GetDC(entryRPM: int): double
}

class PIDRegulator {
  - kp_: float
  - ki_: float
  - kd_: float
  - previousError_: float
  - integral_: float
  - integralLimit_: float
  - maxOutput_: float
  - minOutput_: float
  - dFiltered_: float
  - dFilterAlpha_: float
  - firstRun_: bool
  + Init(coeficients: array<float, 3>): void
  + Run(actual: float, setpoint: float, dt: float): int
  + SetOutputLimits(minOut: float, maxOut: float): void
  + SetDerivativeFilterAlpha(alpha: float): void
}

class MotorConfig {
  - number_: uint8_t
  - inverted_: bool
  - pidCoefs_: array<float, 3>
  + MotorConfig(assignedNumber: uint8_t, invertedStatus: bool, coefs: array<float, 3>)
  + GetPidCoefs(): array<float, 3>
  + GetNumber(): uint8_t
  + IsInverted(): bool
}

class IMUController {
  - isStarted_: atomic<bool>
  - configuration_: rc_mpu_config_t
  - actualData_: vector<float>
  - data_: rc_mpu_data_t
  + IMUController()
  + Init(): int
  + SetEnable(): void
  + SetDisable(): void
  + Stop(): void
  + GetData(): vector<float>
  + GetId(): uint8_t
  - GetAccel(): vector<float>
  - GetGyro(): vector<float>
  - GetQaternion(): vector<float>
}

class EncoderController {
  - encoders_: array<shared_ptr<Encoder>, 4>
  - pool_mutex_: mutex
  + Init(): int
  + Destroy(): void
  + GetEncoder(channel: int): shared_ptr<Encoder>
  + CreateOdometer(channel: int, rpm_factor: int): unique_ptr<Odometer>
}

class Encoder {
  - channel_: int
  - current_count_: int
  - count_mutex_: mutex
  + Encoder(channel: int)
  + GetCount(): int
  + UpdateCount(delta: int): void
  + GetChannel(): int
  + ReadHardware(): int
}

class Odometer {
  - linked_encoder_: shared_ptr<Encoder>
  - last_read_count_: int
  - last_read_time_: chrono::time_point
  - rpm_factor_: int
  + Odometer(encoder: shared_ptr<Encoder>, rpm_factor: int)
  + GetDiff(): int
  + GetRPM(): int
  + Reset(): void
}

package "librobotcontrol" {
  class RC_Motor {
    + {static} rc_motor_init(): int
    + {static} rc_motor_init_freq(frequency: int): int
    + {static} rc_motor_set(ch: int, duty: double): int
    + {static} rc_motor_free_spin(ch: int): int
    + {static} rc_motor_brake(ch: int): int
    + {static} rc_motor_cleanup(): int
  }

  class RC_Encoder {
    + {static} rc_encoder_init(): int
    + {static} rc_encoder_read(ch: int): int
    + {static} rc_encoder_write(ch: int, value: int): int
    + {static} rc_encoder_cleanup(): int
  }
  
  class RC_MPU {
    + {static} rc_mpu_initialize_dmp(data: rc_mpu_data_t*, conf: rc_mpu_config_t): int
    + {static} rc_mpu_power_off(): int
    + {static} rc_mpu_read_accel(data: rc_mpu_data_t*): int
    + {static} rc_mpu_read_gyro(data: rc_mpu_data_t*): int
  }
}

ITransport <|.. TCPTransport
IClient <|.. UDPClient
TCPTransport o-- MessageQueue
KPIRoverECU o-- TCPTransport
KPIRoverECU o-- UDPClient
KPIRoverECU o-- ProtocolHanlder
KPIRoverECU o-- IMUController
ProtocolHanlder o-- MotorController
MotorController o-- Motor
MotorController o-- EncoderController
MotorController "1" o-- "8" Odometer : public(4) + private(4)
Motor o-- PIDRegulator
Motor --> Odometer : uses (private)
Motor ..> RC_Motor : uses
MotorController ..> MotorConfig : uses
IMUController ..> RC_MPU : uses
EncoderController "1" o-- "4" Encoder : fixed array
EncoderController ..> Odometer : <<creates>>
Odometer "N" --> "1" Encoder : shared_ptr
Encoder ..> RC_Encoder : reads

@enduml
